--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -1,26 +1,25 @@
 name: Teste Python
 
 on:
-    push:
-        branches: [ main ]
-    pull-request:
-        branches: [ main ]
+  push:
+     branches: [ main ]
+  pull_request:
+     branches: [ main ]
 
-    jobs: 
-        test:
-            runs-on: ubuntu-latest
-
-        steps:
-        - name: Clonar o código
-          uses: actions/checkout@v4
-        - name: Instalar o Python 
-          uses: actions/setup-python@v5
-          with:
-            python-version: "3.10"
-        - name: Instalar dependencias
-          run: |
-            python -m pip install --upgrade pip
-            pip install pytest
-        - name: Executar teste 
-          run: |
-           pytest 
+jobs: 
+  test:
+    runs-on: windows-latest
+    steps:
+    - name: Clonar o código
+      uses: actions/checkout@v4
+    - name: Instalar o Python 
+      uses: actions/setup-python@v5
+      with:
+       python-version: "3.10"
+    - name: Instalar dependencias
+      run: |
+        python -m pip install --upgrade pip
+        pip install pytest
+    - name: Executar teste 
+      run: |
+        pytest 
